# systems

./: Cargo.toml  README.md
examples/square/: main.rs  square.atlas
src/: animation.rs  component.rs  lib.rs  physics.rs  rect.rs
src/graphics/: atlas.rs  camera.rs  graphics.rs  mod.rs  text.rs  vulkan.rs
src/graphics/shaders/: rect.fs  rect.vs
